--- a/networks.html
+++ b/networks.html
@@ -179,8 +179,7 @@
             <div class="card-wrapper">
                 <div class="col-lg-7  col-md-12 col-12 m-auto align-left">
                     <h2 class="mbr-section-subtitle mbr-white mbr-fonts-style mb-3 display-7">
-                        <strong>Careers</strong>
-                    </h2>
+                        <strong>SOMBUS NETWORKS CAREERS</strong></h2>
                     <h1 class="mbr-section-title mbr-white mbr-fonts-style mb-4 display-2"><strong>Join our team to </strong><br><strong>create best telecom&nbsp;</strong><br><strong>solutions.</strong></h1>
                 </div>
                 <div class="col-lg-5 col-md-12 col-12 align-right m-auto">
