create github pages

--- a/networks.html
+++ b/networks.html
@@ -82,19 +82,19 @@
         <div class="menu-bottom">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown js-float-line" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-7" href="#">
+                        <a class="nav-link link mbr-black text-white display-7" href="#">
                             Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-7" href="#" aria-expanded="true">Business Solutions</a>
+                        <a class="nav-link link mbr-black text-white display-7" href="#" aria-expanded="false">Business Solutions</a>
                         
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-7" href="#">Join Our Team</a>
+                        <a class="nav-link link mbr-black text-white display-7" href="#">Join Our Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-black display-7" href="#">About Us&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Contact US&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
+                        <a class="nav-link link mbr-black text-white display-7" href="#">About Us&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Contact Us&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
                     </li></ul>
 
             </div>
