create github pages

--- a/networks.html
+++ b/networks.html
@@ -69,7 +69,7 @@
                         <a class="nav-link link mbr-black text-white display-4" href="#">Business Services</a>
                     </li><li class="nav-item"><a class="nav-link link mbr-black text-white display-4" href="#">Join Our Team</a></li><li class="nav-item"><a class="nav-link link mbr-black text-white display-4" href="#">About Us</a></li></ul>
 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="#">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-success-outline display-4" href="#">
                         GET QUOTE</a></div>
 
             </div>
