create github pages

--- a/networks.html
+++ b/networks.html
@@ -106,7 +106,7 @@
                 <div class="typed-text pb-3 display-1">
                     <span class="mbr-section-subtitle mbr-fonts-style mbr-white display-1">Your Reliable Telecommunications</span>
                     <span>
-                      <span class="animated-element mbr-bold" data-word1="Solutions" data-word2="Partner" data-word3="Experience" data-speed="50">
+                      <span class="animated-element mbr-bold" data-word1="Solutions" data-word2="Partner" data-word3="Experts" data-speed="50">
                       </span>
                     </span>
                 </div>
@@ -146,10 +146,10 @@
                     <div class="card-box align-center">
 
                         <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">Business<br>Solutions</h4>
-                        <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">We cover all your communications needs</p>
+                        <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">Whether you need communications basics, or are interested in expanding your opportunities with additional services, you can simply select the combination that’s right for your business.</p>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/images/02.jpg" alt="">
+                        <img src="assets/images/background3.jpg" alt="Small Business Telecom Solutions">
                     </div>
                 </div>
             </div>
@@ -158,12 +158,11 @@
                 <div class="card-wrapper align-center">
                     <div class="card-box align-center">
 
-                        <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">About<br>Sombus</h4>
-                        <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit mattis amet consectetur adipiscing</p>
+                        <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">Sales Partnership Program</h4>
+                        <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">Our simple approach to partnering, arms you with a complete package of tools, training, and the latest technology from one of the nation’s leading providers of voice and data services.</p>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/images/03.jpg" alt="">
+                        <img src="assets/images/d4009edc328e27bec89d6c269454-1449311.jpg" alt="Sombus Networks">
                     </div>
                 </div>
             </div>
@@ -174,12 +173,12 @@
                 <div class="card-wrapper align-center">
                     <div class="card-box align-center">
 
-                        <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">Sales Partnership<br>Program</h4>
+                        <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">About<div>Sombus</div></h4>
                         <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit mattis amet consectetur adipiscing</p>
+                            We are your partner to keep your business up to date with the latest technologies at the most competitive pricing available. Sombus Networks specifically caters to the small to medium sized businesses and has helped over 353,000 businesses to date.</p>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/images/04.jpg" alt="">
+                        <img src="assets/images/istockphoto-1054713478-612x612.jpg" alt="Telecommunications Provider">
                     </div>
                 </div>
             </div>
