create github pages

--- a/networks.html
+++ b/networks.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/mbr-favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/sombus-logo-white.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -129,7 +129,7 @@
     <div class="container card-wrapper">
         <div class="row justify-content-center align-items-center" style="height: 3vw;">
              <div class="col-sm-12 col-md-10 text-block align-center">
-                <h2 class="mbr-section-title mbr-fonts-style mbr-light mbr-white mbr-bold display-4"><span style="font-weight: 400;">WE ARE YOUR GUIDE TO FAST AND AFFORDABLE TELECOM FOR YOUR GROWING BUSINESS NEEDS</span></h2>                 
+                <h2 class="mbr-section-title mbr-fonts-style mbr-light mbr-white mbr-bold display-4">WE ARE YOUR GUIDE TO FAST AND AFFORDABLE TELECOM FOR YOUR GROWING BUSINESS NEEDS</h2>                 
              </div>
         </div>
     </div>
