create github pages

--- a/networks.html
+++ b/networks.html
@@ -68,10 +68,10 @@
                     
                     
                     <li class="nav-item">
-                        <a class="nav-link link mbr-black text-white display-4" href="#">Business Solutions</a>
-                    </li><li class="nav-item"><a class="nav-link link mbr-black text-white display-4" href="#">Join Our Team</a></li><li class="nav-item"><a class="nav-link link mbr-black text-white display-4" href="#">About Us</a></li></ul>
+                        <a class="nav-link link mbr-black text-white text-primary display-4" href="business-solutions.html">Business Solutions</a>
+                    </li><li class="nav-item"><a class="nav-link link mbr-black text-white text-primary display-4" href="careers.html">Join Our Team</a></li><li class="nav-item"><a class="nav-link link mbr-black text-white text-primary display-4" href="page3.html">About Us</a></li></ul>
 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-success-outline display-4" href="#">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-success-outline display-4" href="page3.html">
                         GET QUOTE</a></div>
 
             </div>
