--- a/business-solutions.html
+++ b/business-solutions.html
@@ -198,9 +198,8 @@
                     </div>
                     <div class="card-box align-center">
 
-                        <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">Graphic Design</h4>
-                        <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit mattis amet consectetur adipiscing</p>
+                        <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">Scale your Business</h4>
+                        <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">Telecom and Entertainment Provider options for your needs</p>
 
                         
                     </div>
@@ -209,13 +208,13 @@
             <div class="card last col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper align-center">
                     <div class="img-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-cart-full mobi-mbri"></span>
+                        <span class="mbr-iconfont mdi-social-people-outline"></span>
                     </div>
                     <div class="card-box align-center">
 
-                        <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">Media Buying</h4>
+                        <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">Telecom Consulting</h4>
                         <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit mattis amet consectetur adipiscing</p>
+                            30 years of experience in&nbsp;in technology sales and dealer channel management</p>
 
                         
                     </div>
