create github pages

--- a/careers.html
+++ b/careers.html
@@ -68,7 +68,7 @@
                         <a class="nav-link link mbr-black text-white text-primary display-4" href="business-solutions.html">Business Solutions</a>
                     </li><li class="nav-item"><a class="nav-link link mbr-black text-white text-primary display-4" href="careers.html">Join Our Team</a></li><li class="nav-item"><a class="nav-link link mbr-black text-white text-primary display-4" href="page3.html">About Us</a></li></ul>
 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-success-outline display-4" href="contact-us.html">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-success-outline display-4" href="contact-us.html#contacts2-21">
                         GET QUOTE</a></div>
 
             </div>
@@ -143,8 +143,8 @@
                 <div class="card">
                     <h3 class="mbr-section-subtitle align-left mbr-fonts-style mb-3 display-7">
                         <strong>SOMBUS NETWORKS</strong></h3>
-                    <h2 class="mbr-section-title align-left mbr-fonts-style mb-3 display-2"><strong>Join our T.E.A.M.</strong></h2>
-                    <p class="mbr-text align-left mbr-fonts-style mb-4 display-7">Sombus is currently hiring sales people to sell our products to businesses throughout the US.<br><strong>Benefits include:</strong></p>
+                    <h2 class="mbr-section-title align-left mbr-fonts-style mb-3 display-2"><strong>Come join our T.E.A.M.</strong></h2>
+                    <p class="mbr-text align-left mbr-fonts-style mb-4 display-7">Send us your resume to schedule your job interview.<br>Always looking for great people like you!<br><strong>Benefits include:</strong></p>
                     <div class="mbr-list mbr-fonts-style display-7">
                         <ul>
                             <li><strong>Competitive Salary + Uncapped Commissions</strong></li>
@@ -167,8 +167,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-7 pb-3">
                 <h4 class="main-title align-center pb-3 mbr-bold mbr-black mbr-fonts-style display-2">Google Review</h4>
-                <h5 class="main-subtitle align-center mbr-regular mbr-black mbr-fonts-style display-7">Lorem ipsum dolor sit amet,
-                    consectetur adipisicing elit, sed do eiusmod tempor incididunt.</h5>
+                
             </div>
         </div>
         <div class="row justify-content-center">
