--- a/networks.html
+++ b/networks.html
@@ -71,7 +71,7 @@
                         <a class="nav-link link mbr-black text-white text-primary display-4" href="business-solutions.html">Business Solutions</a>
                     </li><li class="nav-item"><a class="nav-link link mbr-black text-white text-primary display-4" href="careers.html">Join Our Team</a></li><li class="nav-item"><a class="nav-link link mbr-black text-white text-primary display-4" href="page3.html">About Us</a></li></ul>
 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-success-outline display-4" href="contact-us.html">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-success-outline display-4" href="contact-us.html#contacts2-21">
                         GET QUOTE</a></div>
 
             </div>
@@ -114,7 +114,7 @@
                 </div>
                 <p class="mbr-section-text mbr-fonts-style display-5">
                     Creating the telecom solutions that will fit your budget and exceed your expectations.</p>
-                <div class="pt-3 mbr-section-btn"><a class="btn btn-md btn-primary display-4" type="submit">GET STARTED</a></div>
+                <div class="pt-3 mbr-section-btn"><a class="btn btn-md btn-primary display-4" type="submit" href="contact-us.html#contacts2-21">GET STARTED</a></div>
             </div>
         </div>
     </div>
@@ -264,14 +264,14 @@
                             <span class="mbr-iconfont mbrib-growing-chart"></span>
                             <p class="mbr-text mbr-regular mbr-fonts-style display-7">Excellent Commission Structure</p>
                         </div>
-                        <span class="mbr-iconfont mobi-mbri-right mobi-mbri"></span>
+                        <a href="careers.html"><span class="mbr-iconfont mobi-mbri-right mobi-mbri"></span></a>
                     </div>
                     <div class="button mb-3">
                         <div class="wrapper mbr-flex">
                             <span class="mbr-iconfont icon54-v4-rocket"></span>
                             <p class="mbr-text mbr-regular mbr-fonts-style display-7">Dedicated Channel Manager</p>
                         </div>
-                        <span class="mbr-iconfont mobi-mbri-right mobi-mbri"></span>
+                        <a href="careers.html"><span class="mbr-iconfont mobi-mbri-right mobi-mbri"></span></a>
 
                     </div>
                     <div class="button mb-3">
@@ -319,7 +319,7 @@
                             <div class="card-box">
                                 <h5 class="card-title mbr-regular pb-1 mbr-black mbr-fonts-style display-5">Outstanding Sales Support</h5>
                                 <p class="card-text mbr-regular mbr-black mbr-fonts-style display-7">Our unique approach combines the versatility of a full product portfolio ongoing comprehensive training, and outstanding sales support – including a fully automated back office.<br></p>
-                       <div class="mbr-section-btn"><a class="btn btn-md btn-bgr btn-success-outline display-4" href="https://sombus.com" target="_blank"><span style="font-weight: normal;">LEARN MORE</span><br></a></div>     </div>
+                       <div class="mbr-section-btn"><a class="btn btn-md btn-bgr btn-success-outline display-4" href="contact-us.html" target="_blank"><span style="font-weight: normal;">LEARN MORE</span><br></a></div>     </div>
 
                         </div>
                     </div>
