--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -67,7 +67,7 @@
                         <a class="nav-link link mbr-black text-white text-primary display-4" href="business-solutions.html">Business Solutions</a>
                     </li><li class="nav-item"><a class="nav-link link mbr-black text-white text-primary display-4" href="careers.html">Join Our Team</a></li><li class="nav-item"><a class="nav-link link mbr-black text-white text-primary display-4" href="page3.html">About Us</a></li></ul>
 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-success-outline display-4" href="contact-us.html">
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-success-outline display-4" href="contact-us.html#contacts2-21">
                         GET QUOTE</a></div>
 
             </div>
