create github pages

--- a/business-solutions.html
+++ b/business-solutions.html
@@ -104,7 +104,7 @@
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1"><strong>BUSINESS SOLUTIONS</strong></h1>
                 <p class="mbr-text pb-4 mbr-white mbr-regular mbr-fonts-style display-5">Your Local Business Solution Provider for Commercial Internet, Telecommunications and Entertainment Packages<br>
                 </p>
-                <div class="mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="#"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>GET STARTED</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="contact-us.html#contacts2-21"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>GET STARTED</a></div>
             </div>
         </div>
     </div>
