create github pages

--- a/careers.html
+++ b/careers.html
@@ -98,8 +98,8 @@
         <div class="row justify-content-center">
             <div class="mbr-white col-md-12 col-lg-9">
                 <h2 class="mbr-section-subtitle mbr-fonts-style pb-1 display-1"><strong>JOIN OUR TEAM!</strong></h2>
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-5"><strong>“Teamwork is the secret that makes common people achieve uncommon result”</strong></h1>
-                <p class="mbr-text pb-4 mbr-white mbr-regular mbr-fonts-style display-5">Sombus is currently hiring sales professionals to sell our products to businesses throughout the Continental United States.<br>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-5"><strong><em>“Teamwork is the secret that makes common people achieve uncommon result”</em></strong></h1>
+                <p class="mbr-text pb-4 mbr-white mbr-regular mbr-fonts-style display-5">Sombus is currently hiring sales professionals to sell our products to businesses throughout the United States.<br>
                 </p>
                 <div class="mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="mailto:resumes@sombus.com"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>SEND YOUR RESUME</a></div>
             </div>
@@ -114,7 +114,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-12">
                 
-                <h4 class="mbr-section-subtitle align-left mbr-fonts-style mb-4 display-4"><strong>WE ARE YOUR GUIDE TO FAST AND AFFORDABLE TELECOM FOR YOUR GROWING BUSINESS NEEDS</strong></h4>
+                <h4 class="mbr-section-subtitle align-left mbr-fonts-style mb-4 display-4"><strong>SOMBUS IS THE BEST JOB OPPORTUNITY FOR SALES PROFESSIONALS IN THE ORLANDO AND SURROUNDING AREAS</strong></h4>
                 
             </div>
         </div>
