create github pages

--- a/careers.html
+++ b/careers.html
@@ -99,9 +99,9 @@
             <div class="mbr-white col-md-12 col-lg-9">
                 <h2 class="mbr-section-subtitle mbr-fonts-style pb-1 display-1"><strong>JOIN OUR TEAM!</strong></h2>
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-5"><strong><em>“Teamwork is the secret that makes common people achieve uncommon result”</em></strong></h1>
-                <p class="mbr-text pb-4 mbr-white mbr-regular mbr-fonts-style display-5">Sombus is currently hiring Sales Professionals to sell our products to businesses throughout the United States.<br>
+                <p class="mbr-text pb-4 mbr-white mbr-regular mbr-fonts-style display-5">We are currently hiring Sales Professionals to offer our Telecommunication Network Products all across the United States.<br>
                 </p>
-                <div class="mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="mailto:resumes@sombus.com"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>SEND YOUR RESUME</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="mailto:resumes@sombus.com"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>SEND US YOUR RESUME</a></div>
             </div>
         </div>
     </div>
