create github pages

--- a/careers.html
+++ b/careers.html
@@ -147,12 +147,12 @@
                     <p class="mbr-text align-left mbr-fonts-style mb-4 display-7">Send us your resume to schedule your job interview.<br>Always looking for great people like you!<br><strong>Benefits include:</strong></p>
                     <div class="mbr-list mbr-fonts-style display-7">
                         <ul>
-                            <li><strong>Competitive Salary + </strong></li><li><strong>Uncapped Commissions</strong></li>
+                            <li><strong>Competitive Salary</strong></li><li><strong>Uncapped Commissions</strong></li>
                             <li><strong>Healthcare</strong></li>
                             <li><strong>No Weekends</strong></li>
                         </ul>
                     </div>
-                    <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-white-outline display-4" href="mailto:resumes@sombus.com">SEND YOUR RESUME</a></div>
+                    <div class="align-left mbr-section-btn mt-4"><a class="btn btn-lg btn-white-outline display-4" href="mailto:resumes@sombus.com">SEND US YOUR RESUME</a></div>
                 </div>
             </div>
         </div>
@@ -167,7 +167,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-7 pb-3">
                 <h4 class="main-title align-center pb-3 mbr-bold mbr-black mbr-fonts-style display-2">Google Review</h4>
-                
+                <h5 class="main-subtitle align-center mbr-regular mbr-black mbr-fonts-style display-7">FROM OUR TEAM MEMBERS</h5>
             </div>
         </div>
         <div class="row justify-content-center">
