create github pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -108,7 +108,7 @@
             </div>
 
             <div class="card col-12 img-col col-md-12 col-lg-6">
-                <img src="assets/images/sombus-logo-white.png" alt="SOmbus">
+                <img src="assets/images/sombus-logo-white.png" alt="Sombus">
 
             </div>
 
