create github pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -198,7 +198,7 @@
             <div class="card first col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper align-center">
                     <div class="img-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-phone mobi-mbri"></span>
+                        <a href="tel:+1-407-2876570"><span class="mbr-iconfont mobi-mbri-phone mobi-mbri"></span></a>
                     </div>
                     <div class="card-box align-center">
 
@@ -212,7 +212,7 @@
             <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper align-center">
                     <div class="img-wrapper">
-                        <span class="mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
+                        <a href="mailto:info@sombus.com"><span class="mbr-iconfont mobi-mbri-letter mobi-mbri"></span></a>
                     </div>
                     <div class="card-box align-center">
 
