create github pages

--- a/networks.html
+++ b/networks.html
@@ -128,7 +128,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-12">
                 
-                <h4 class="mbr-section-subtitle align-left mbr-fonts-style mb-4 display-4"><strong>WE ARE YOUR GUIDE TO FAST AND AFFORDABLE TELECOM FOR YOUR GROWING BUSINESS NEEDS</strong></h4>
+                <h4 class="mbr-section-subtitle align-left mbr-fonts-style mb-4 display-4"><strong>FAST, RELIABLE &amp; AFFORDABLE TELECOMMUNICATIONS FOR YOUR BUSINESS</strong></h4>
                 
             </div>
         </div>
@@ -151,7 +151,7 @@
                         <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">Whether you need communications basics, or are interested in expanding your opportunities with additional services, you can simply select the combination that’s right for your business.</p>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/images/background3.jpg" alt="Small Business Telecom Solutions">
+                        <a href="business-solutions.html"><img src="assets/images/background3.jpg" alt="Small Business Telecom Solutions"></a>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                         <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">Our simple approach to partnering, arms you with a complete package of tools, training, and the latest technology from one of the nation’s leading providers of voice and data services.</p>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/images/d4009edc328e27bec89d6c269454-1449311.jpg" alt="Sombus Networks">
+                        <a href="careers.html"><img src="assets/images/d4009edc328e27bec89d6c269454-1449311.jpg" alt="Sombus Networks"></a>
                     </div>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                             We are your partner to keep your business up to date with the latest technologies at the most competitive pricing available. Sombus Networks specifically caters to the small to medium sized businesses and has helped over 353,000 businesses to date.</p>
                     </div>
                     <div class="img-wrapper">
-                        <img src="assets/images/istockphoto-1054713478-612x612.jpg" alt="Telecommunications Provider">
+                        <a href="contact-us.html"><img src="assets/images/istockphoto-1054713478-612x612.jpg" alt="Telecommunications Provider"></a>
                     </div>
                 </div>
             </div>
