create github pages

--- a/business-solutions.html
+++ b/business-solutions.html
@@ -135,7 +135,7 @@
             <div class="mbr-white col-md-12 col-lg-9">
                 
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1"><strong>DIRECTV BUSINESS SOLUTIONS</strong></h1>
-                <p class="mbr-text pb-4 mbr-white mbr-regular mbr-fonts-style display-5">Your DIRECTV for Business Authorized Dealer<br>WE HAVE THE RIGHT PACKAGE FOR YOU<br><br>Order DIRECTV for BUSINESS℠ with your current Business Telecommunication Services for big Savings<br></p>
+                <p class="mbr-text pb-4 mbr-white mbr-regular mbr-fonts-style display-5">Your DIRECTV for BUSINESS℠ Authorized Dealer<br>WE HAVE THE RIGHT PACKAGE FOR YOU<br><br>Order DIRECTV for BUSINESS℠ with your current Business Telecommunication Services for big Savings<br></p>
                 <div class="mbr-section-btn"><a class="btn btn-sm btn-primary display-5" href="https://business.directvdealer.com/florida/orlando/sombus-networks-inc/contact-us" target="_blank"><span class="mobi-mbri mobi-mbri-paper-plane mbr-iconfont mbr-iconfont-btn"></span>GET STARTED • GET A FREE QUOTE</a></div>
             </div>
         </div>
