--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ Headquartered in Orlando, FL, Sombus Networks is an industry leading business en
                 <div class="card-wrapper align-center">
                     <div class="card-box align-center">
 
-                        <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">Your Local DIRECTV Authorized Business Dealer</h4>
+                        <h4 class="mbr-section-title pb-2 mbr-semibold mbr-fonts-style display-5">Your Local DIRECTV for BUSINESS℠ Authorized Dealer</h4>
                         <p class="mbr-section-text align-center mbr-regular pb-2 mbr-fonts-style display-7">
                             We are your partner to keep your business up to date with the latest technologies at competitive pricing available. Sombus Networks specifically caters to the small to medium sized businesses and has helped over 353,000 businesses to date.</p>
                     </div>
