create github pages

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ Headquartered in Orlando, FL, Sombus Networks is an industry leading business en
     
     
     <div class="container">
-        <h4 class="mbr-section-title mbr-fonts-style display-2"><strong>Keep customers coming back for more!<br>DIRECTV for Business Packages for Every Workplace</strong><br><br>Draw in the crowds with sports events, news, and entertainment and promote customer loyalty with DIRECTV for BUSINESS channels.</h4>
+        <h4 class="mbr-section-title mbr-fonts-style display-2"><strong>Keep customers coming back for more!<br>DIRECTV for BUSINESS℠ Packages for Every Workplace</strong><br><br>Draw in the crowds with sports events, news, and entertainment and promote customer loyalty with DIRECTV for BUSINESS channels.</h4>
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://embed.wave.video/4b12c16085f8b2a1b3e30697?loop=1&amp;autoplay=1" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
