create github pages

--- a/business-solutions.html
+++ b/business-solutions.html
@@ -267,7 +267,7 @@
 <br>
 <br>●	Regular Game Mix: Watch up to 4 or 8 live games at once or pick one - Game Mix Channels let you watch up to eight games live on one screen. 
 <br>
-<strong><br>Direct Proximity:</strong>  Only available in HD.
+<strong><br></strong>Only available in HD.
 <br>
 <br>● DIRECTV FANTASY ZONE® CHANNEL (Channel 704) Exclusive channel lets you watch your favorite fantasy players live from game-to-game with real-time analysis from our fantasy experts. 
 <br>
