--- a/careers.html
+++ b/careers.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -31,7 +32,7 @@
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  
+
   
   <!-- TruConversion for sombus.com -->
 <script type="text/javascript">
@@ -47,7 +48,6 @@
 </script>
                       
   
-
 </head>
 <body>
 
@@ -263,7 +263,7 @@
                 <h3 class="mbr-section-subtitle mbr-fonts-style mbr-lighter display-4">
                     Monday - Friday 9:00 AM - 5:00 PM</h3>
                 <p class="mbr-text mbr-fonts-style display-5">
-                    1-888-927-1753 
+                    1-877-678-8100 
                 </p>
             </div>
             <div class="col-md-6 second-column">
@@ -350,6 +350,5 @@
   
   
   <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
